// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters component calls onChange handler 1`] = `
Array [
  Array [
    "product-1",
    "option-1",
    true,
  ],
]
`;

exports[`Filters component renders correct summaryLabel if filter.label is an empty string 1`] = `
<div>
  <div>
    <div
      class="Accordion-root-118 Accordion-noInnerPadding-121"
    >
      <div
        class="MuiPaper-root MuiAccordion-root Accordion-item-119 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          aria-label="group-label"
          class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-122"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content Accordion-summaryContent-124"
          >
            <h6
              class="MuiTypography-root Typography-root-128 MuiTypography-h6"
              data-testid="typography"
            >
              group-label
            </h6>
          </div>
          <div
            aria-disabled="false"
            aria-hidden="true"
            class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root Accordion-details-120 Accordion-details-136"
                >
                  <div
                    class="Filters-list-117"
                  >
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-137"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-139 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-142"
                                data-indeterminate="false"
                                name="option-1"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 1
                          </span>
                        </label>
                      </div>
                    </div>
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-137"
                      >
                        <label
                          class="MuiFormControlLabel-root Mui-disabled"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-139 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-140 Mui-checked PrivateSwitchBase-disabled-141 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
                            data-testid="filter-checkbox"
                            tabindex="-1"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                checked=""
                                class="PrivateSwitchBase-input-142"
                                data-indeterminate="false"
                                disabled=""
                                name="option-2"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
                          >
                            Option 2
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filters component renders correctly 1`] = `
<div>
  <div>
    <div
      class="Accordion-root-2 Accordion-noInnerPadding-5"
    />
  </div>
</div>
`;

exports[`Filters component renders disabled filters 1`] = `
<div>
  <div>
    <div
      class="Accordion-root-66 Accordion-noInnerPadding-69"
    >
      <div
        class="MuiPaper-root MuiAccordion-root Accordion-item-67 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          aria-label="group-label"
          class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-70"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content Accordion-summaryContent-72"
          >
            <h6
              class="MuiTypography-root Typography-root-76 MuiTypography-h6"
              data-testid="typography"
            >
              group-label
            </h6>
          </div>
          <div
            aria-disabled="false"
            aria-hidden="true"
            class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root Accordion-details-68 Accordion-details-84"
                >
                  <div
                    class="Filters-list-65"
                  >
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-85"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-87 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-90"
                                data-indeterminate="false"
                                name="option-1"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 1
                          </span>
                        </label>
                      </div>
                    </div>
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-85"
                      >
                        <label
                          class="MuiFormControlLabel-root Mui-disabled"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-87 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-88 Mui-checked PrivateSwitchBase-disabled-89 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
                            data-testid="filter-checkbox"
                            tabindex="-1"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                checked=""
                                class="PrivateSwitchBase-input-90"
                                data-indeterminate="false"
                                disabled=""
                                name="option-2"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
                          >
                            Option 2
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filters component renders multiple filters 1`] = `
<div>
  <div>
    <div
      class="Accordion-root-11 Accordion-noInnerPadding-14"
    >
      <div
        class="MuiPaper-root MuiAccordion-root Accordion-item-12 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          aria-label="group-label"
          class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-15"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content Accordion-summaryContent-17"
          >
            <h6
              class="MuiTypography-root Typography-root-21 MuiTypography-h6"
              data-testid="typography"
            >
              group-label
            </h6>
          </div>
          <div
            aria-disabled="false"
            aria-hidden="true"
            class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root Accordion-details-13 Accordion-details-29"
                >
                  <div
                    class="Filters-list-10"
                  >
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-30"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-32 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-35"
                                data-indeterminate="false"
                                name="option-1"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 1
                          </span>
                        </label>
                      </div>
                    </div>
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-30"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-32 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-35"
                                data-indeterminate="false"
                                name="option-2"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 2
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiAccordion-root Accordion-item-12 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          aria-label="group-label-2"
          class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-15"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content Accordion-summaryContent-17"
          >
            <h6
              class="MuiTypography-root Typography-root-21 MuiTypography-h6"
              data-testid="typography"
            >
              group-label-2
            </h6>
          </div>
          <div
            aria-disabled="false"
            aria-hidden="true"
            class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root Accordion-details-13 Accordion-details-38"
                >
                  <div
                    class="Filters-list-10"
                  >
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-30"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-32 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-35"
                                data-indeterminate="false"
                                name="option-1"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 1
                          </span>
                        </label>
                      </div>
                    </div>
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-30"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-32 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-35"
                                data-indeterminate="false"
                                name="option-2"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 2
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filters component renders selected filters 1`] = `
<div>
  <div>
    <div
      class="Accordion-root-40 Accordion-noInnerPadding-43"
    >
      <div
        class="MuiPaper-root MuiAccordion-root Accordion-item-41 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          aria-label="group-label"
          class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot-44"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content Accordion-summaryContent-46"
          >
            <h6
              class="MuiTypography-root Typography-root-50 MuiTypography-h6"
              data-testid="typography"
            >
              group-label
            </h6>
          </div>
          <div
            aria-disabled="false"
            aria-hidden="true"
            class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root Accordion-details-42 Accordion-details-58"
                >
                  <div
                    class="Filters-list-39"
                  >
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-59"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-61 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                class="PrivateSwitchBase-input-64"
                                data-indeterminate="false"
                                name="option-1"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 1
                          </span>
                        </label>
                      </div>
                    </div>
                    <div>
                      <div
                        class="MuiFormControl-root Checkbox-root-59"
                      >
                        <label
                          class="MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-61 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-62 Mui-checked MuiIconButton-colorPrimary"
                            data-testid="filter-checkbox"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <input
                                checked=""
                                class="PrivateSwitchBase-input-64"
                                data-indeterminate="false"
                                name="option-2"
                                type="checkbox"
                                value=""
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                          >
                            Option 2
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
